chore: 언어 스크립트 수정[FE-48]

--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -37,5 +37,5 @@
     "Purpose": "목적",
     "Log out": "로그아웃",
     "Medical Document": "의료 문서",
-     "where_do_you_want_to_go": "어디로 가고 싶으신가요?"
+    "Where do you want to go?": "어디로 가고 싶으신가요?"
   }
