--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -36,6 +36,6 @@
     "selfDiagnosisMessage": "Let’s fill out the <1>self-diagnosis form</1> to explain your disease!",
     "Purpose": "Purpose",
     "Log out": "Log out",
-     "Medical Document": "Medical Document",
-     "where_do_you_want_to_go": "Where do you want to go?"
+    "Medical Document": "Medical Document",
+    "Where do you want to go?": "Where do you want to go?"
   }
