--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -2,6 +2,8 @@
     "Self-diagnosis": "자가진단",
     "Hospital": "병원",
     "Pharmacy": "약국",
+    "HOSPITAL": "병원",
+    "PHARMACY": "약국",
     "How severe is the pain?": "통증이 얼마나 심한가요?",
     "How long did the symptoms lasted?": "증상이 얼마나 지속되었나요?",
     "Duration of symptoms": "증상 지속 기간",
@@ -19,21 +21,24 @@
     "Self-Diagnosis": "자가진단",
     "Medical Record": "진료기록",
     "Health Status": "건강 상태",
-    "Are you sure you want to finish the interpretation?": "해석을 종료하시겠습니까?",
-    "Would you like to start interpretation?": "해석을 시작하시겠습니까?",
+    "Are you sure you want to finish the interpretation?": "통역을 종료하시겠습니까?",
+    "Would you like to start interpretation?": "통역을 시작하시겠습니까?",
+    "Your consultation is complete!": "진료가 완료되었습니다!",
+    "Please leave a review.": "리뷰를 남겨주세요.",
+    "Please write a hospital.": "병원을 작성해주세요.",
     "whatToExpect": "진료 시 예상되는 내용",
     "keyPhrases": "주요 문구",
     "actionGuide": "행동 가이드",
     "possibleQuestions": "가능한 질문",
     "tips": "팁",
-    "Text translation": "문자 번역",
+    "Text translation": "OCR",
     "OUCH guide": "OUCH 가이드",
     "Recommended Hospital": "추천 병원",
     "Identified Symptoms": "확인된 증상",
     "Find Recommended Hospitals": "추천 병원 찾기",
     "Find Pharmacy": "약국 찾기",
-    "Finish": "완료",
-    "selfDiagnosisMessage": "질병 설명을 위해 <1>자가진단 양식</1>을 작성해 주세요!",
+    "Finish": "종료",
+    "selfDiagnosisMessage": "증상 설명을 위해 <1>자가진단 표</1>를 작성해 주세요!",
     "Purpose": "목적",
     "Log out": "로그아웃",
     "Medical Document": "의료 문서",
@@ -47,8 +52,25 @@
     },
     "mild": "경증",
     "severe": "중증",
-    "Search for hospital and pharmacies" :"병원 또는 약국 검색해 주세요",
+    "Search for hospital and pharmacies" :"병원 또는 약국을 검색해 주세요",
     "Medical Department": "진료과",
     "Recommended": "추천순",
-    "Distance": "거리순"
+    "Distance": "거리순",
+    "Disease": "질병",
+    "Allergy": "알레르기",
+    "Blood Pressure": "혈압",
+    "BloodSugar": "혈당",
+    "Blood Sugar": "혈당",
+    "MedicineHistory": "복용 이력",
+    "History": "복용 이력",
+    "Date of visit": "방문일",
+    "Date of Visit": "방문일",
+    "Visiting Hospital / Pharmacy": "방문한 병원 / 약국",
+    "Symptoms": "증상",
+    "Severity of SymptomsList(0~10)": "증상의 심각도 (0~10)",
+    "Additional Notes": "추가 메모",
+    "Visiting Hospital": "방문한 병원",
+    "Medical Subjects": "진료 과목",
+    "Medical Subject": "진료 과목",
+    "Treatment Summary": "진료 요약"
   }
