--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -2,6 +2,8 @@
     "Self-diagnosis": "自我诊断",
     "Hospital": "医院",
     "Pharmacy": "药房",
+    "HOSPITAL": "医院",
+    "PHARMACY": "药房",
     "How severe is the pain?": "疼痛有多严重？",
     "How long did the symptoms lasted?": "症状持续了多久？",
     "Duration of symptoms": "症状持续时间",
@@ -21,6 +23,8 @@
     "Health Status": "健康状况",
     "Are you sure you want to finish the interpretation?": "您确定要结束翻译吗？",
     "Would you like to start interpretation?": "您想开始翻译吗？",
+    "Please leave a review.": "请留下评论。",
+    "Please write a hospital.": "请填写医院名称。",
     "whatToExpect": "就诊预期",
     "keyPhrases": "关键短语",
     "actionGuide": "操作指南",
@@ -50,5 +54,20 @@
     "Search for hospital and pharmacies": "请搜索医院或药店",
     "Medical Department": "科别",
     "Recommended": "推荐",
-    "Distance": "距离"
+    "Distance": "距离",
+    "Disease": "疾病",
+    "Allergy": "过敏",
+    "Blood Pressure": "血压",
+    "BloodSugar": "血糖",
+    "Blood Sugar": "血糖",
+    "MedicineHistory": "服药历史",
+    "History": "服药历史",
+    "Date of visit": "就诊日期",
+    "Visiting Hospital / Pharmacy": "就诊医院 / 药房",
+    "Symptoms": "症状",
+    "Severity of SymptomsList(0~10)": "症状严重程度 (0~10)",
+    "Additional Notes": "附加说明",
+    "Visiting Hospital": "就诊医院",
+    "Medical Subjects": "医疗科目",
+    "Treatment Summary": "治疗总结"
   }
