chore: 자가진단, 통역 중국어 번역 추가 [FE-48]

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -1,74 +1,82 @@
 {
-    "Self-diagnosis": "Self-diagnosis",
-    "Hospital": "Hospital",
-    "HOSPITAL": "Hospital",
-    "Pharmacy": "Pharmacy",
-    "PHARMACY": "Pharmacy",
-    "How severe is the pain?": "How severe is the pain?",
-    "How long did the symptoms lasted?": "How long did the symptoms last?",
-    "Duration of symptoms": "Duration of symptoms",
-    "Please write down what you would like to tell the doctor additionally": "Please write down what you would like to tell the doctor additionally",
-    "Please write down the relevant symptoms in detail": "Please write down the relevant symptoms in detail",
-    "What symptom are you experiencing?": "What symptom are you experiencing?",
-    "symptoms": "Symptoms",
-    "Where are you feeling uncomfortable?": "Where are you feeling uncomfortable?",
-    "Review": "Review",
-    "Like": "Like",
-    "Favorite": "Favorite",
-    "Notice": "Notice",
-    "Feedback": "Feedback",
-    "Customer Service": "Customer Service",
-    "Self-Diagnosis": "Self-Diagnosis",
-    "Medical Record": "Medical Record",
-    "Health Status": "Health Status",
-    "Are you sure you want to finish the interpretation?": "Are you sure you want to finish the interpretation?",
-    "Would you like to start interpretation?": "Would you like to start interpretation?",
-    "Please leave a review.": "Please leave a review.",
-    "Please write a hospital.": "Please write a hospital.",
-    "Your consultation is complete!": "Your consultation is complete!",
-    "whatToExpect": "What to Expect",
-    "keyPhrases": "Key Phrases",
-    "actionGuide": "Action Guide",
-    "possibleQuestions": "Possible Questions",
-    "tips": "Tips",
-    "Text translation": "Text Translation",
-    "OUCH guide": "OUCH Guide",
-    "Recommended Hospital": "Recommended Hospital",
-    "Identified Symptoms": "Identified Symptoms",
-    "Find Recommended Hospitals": "Find Recommended Hospitals",
-    "Find Pharmacy": "Find Pharmacy",
-    "Finish": "Finish",
-    "selfDiagnosisMessage": "Let’s fill out the <1>self-diagnosis form</1> to explain your disease!",
-    "Purpose": "Purpose",
-    "Log out": "Log out",
-    "Medical Document": "Medical Document",
-    "Where do you want to go?": "Where do you want to go?",
-    "mild": "mild",
-    "severe": "severe",
-    "duration": {
-      "LESS_THAN_1_DAY": "Less than a day",
-      "ONE_TO_3_DAYS": "1-3 days",
-      "MORE_THAN_3_DAYS": "More than 3 days",
-      "MORE_THAN_1_WEEK": "More than a week",
-      "MORE_THAN_1_MONTH": "More than a month"
-    },
-    "Search for hospital and pharmacies": "Search for hospital and pharmacies",
-    "Medical Department": "Medical Department",
-    "Recommended": "Recommended",
-    "Distance": "Distance",
-    "Dieases": "Dieases",
-    "Allergy": "Allergy",
-    "Blood Pressure": "Blood Pressure",
-    "BloodSugar": "Blood Sugar",
-    "Blood Sugar": "Blood Sugar",
-    "MedicineHistory": "Medication History",
-    "History": "Medication History",
-    "Date of visit": "Date of visit",
-    "Visiting Hospital / Pharmacy": "Visiting Hospital / Pharmacy",
-    "Symptoms": "Symptoms",
-    "Severity of SymptomsList(0~10)": "Severity of SymptomsList(0~10)",
-    "Additional Notes": "Additional Notes",
-    "Visiting Hospital": "Visiting Hospital",
-    "Treatment Summary": "Treatment Summary"
-    
-  }
+  "Self-diagnosis": "Self-diagnosis",
+  "Hospital": "Hospital",
+  "HOSPITAL": "Hospital",
+  "Pharmacy": "Pharmacy",
+  "PHARMACY": "Pharmacy",
+  "How severe is the pain?": "How severe is the pain?",
+  "How long did the symptoms lasted?": "How long did the symptoms last?",
+  "Duration of symptoms": "Duration of symptoms",
+  "Please write down what you would like to tell the doctor additionally": "Please write down what you would like to tell the doctor additionally",
+  "Please write down the relevant symptoms in detail": "Please write down the relevant symptoms in detail",
+  "What symptom are you experiencing?": "What symptom are you experiencing?",
+  "symptoms": "Symptoms",
+  "Where are you feeling uncomfortable?": "Where are you feeling uncomfortable?",
+  "Review": "Review",
+  "Like": "Like",
+  "Favorite": "Favorite",
+  "Notice": "Notice",
+  "Feedback": "Feedback",
+  "Customer Service": "Customer Service",
+  "Self-Diagnosis": "Self-Diagnosis",
+  "Medical Record": "Medical Record",
+  "Health Status": "Health Status",
+  "Are you sure you want to finish the interpretation?": "Are you sure you want to finish the interpretation?",
+  "Would you like to start interpretation?": "Would you like to start interpretation?",
+  "Please leave a review.": "Please leave a review.",
+  "Please write a hospital.": "Please write a hospital.",
+  "Your consultation is complete!": "Your consultation is complete!",
+  "whatToExpect": "What to Expect",
+  "keyPhrases": "Key Phrases",
+  "actionGuide": "Action Guide",
+  "possibleQuestions": "Possible Questions",
+  "tips": "Tips",
+  "Text translation": "Text Translation",
+  "OUCH guide": "OUCH Guide",
+  "Recommended Hospital": "Recommended Hospital",
+  "Identified Symptoms": "Identified Symptoms",
+  "Find Recommended Hospitals": "Find Recommended Hospitals",
+  "Find Pharmacy": "Find Pharmacy",
+  "Finish": "Finish",
+  "selfDiagnosisMessage": "Let’s fill out the <1>self-diagnosis form</1> to explain your disease!",
+  "Purpose": "Purpose",
+  "Log out": "Log out",
+  "Medical Document": "Medical Document",
+  "Where do you want to go?": "Where do you want to go?",
+  "mild": "mild",
+  "severe": "severe",
+  "duration": {
+    "LESS_THAN_1_DAY": "Less than a day",
+    "ONE_TO_3_DAYS": "1-3 days",
+    "MORE_THAN_3_DAYS": "More than 3 days",
+    "MORE_THAN_1_WEEK": "More than a week",
+    "MORE_THAN_1_MONTH": "More than a month"
+  },
+  "Search for hospital and pharmacies": "Search for hospital and pharmacies",
+  "Medical Department": "Medical Department",
+  "Recommended": "Recommended",
+  "Distance": "Distance",
+  "Dieases": "Dieases",
+  "Allergy": "Allergy",
+  "Blood Pressure": "Blood Pressure",
+  "BloodSugar": "Blood Sugar",
+  "Blood Sugar": "Blood Sugar",
+  "MedicineHistory": "Medication History",
+  "History": "Medication History",
+  "Date of visit": "Date of visit",
+  "Visiting Hospital / Pharmacy": "Visiting Hospital / Pharmacy",
+  "Symptoms": "Symptoms",
+  "Severity of SymptomsList(0~10)": "Severity of SymptomsList(0~10)",
+  "Additional Notes": "Additional Notes",
+  "Visiting Hospital": "Visiting Hospital",
+  "Treatment Summary": "Treatment Summary",
+  "Start": "Start",
+  "Situational Guide": "Situational Guide",
+  "Cancel": "Cancel",
+  "Submit": "Submit",
+  "Stop": "Stop",
+  "Do you want to stop\nthe self-diagnosis?": "Do you want to stop\nthe self-diagnosis?",
+  "Prev": "Prev",
+  "Next": "Next",
+  "Save": "Save"
+}
