--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -1,73 +1,83 @@
 {
-    "Self-diagnosis": "自我诊断",
-    "Hospital": "医院",
-    "Pharmacy": "药房",
-    "HOSPITAL": "医院",
-    "PHARMACY": "药房",
-    "How severe is the pain?": "疼痛有多严重？",
-    "How long did the symptoms lasted?": "症状持续了多久？",
-    "Duration of symptoms": "症状持续时间",
-    "Please write down what you would like to tell the doctor additionally": "请写下您想额外告诉医生的内容",
-    "Please write down the relevant symptoms in detail": "请详细写下相关症状",
-    "What symptom are you experiencing?": "您有哪些症状？",
-    "symptoms": "症状",
-    "Where are you feeling uncomfortable?": "您哪里不舒服？",
-    "Review": "评价",
-    "Like": "点赞",
-    "Favorite": "收藏",
-    "Notice": "通知",
-    "Feedback": "反馈",
-    "Customer Service": "客户服务",
-    "Self-Diagnosis": "自我诊断",
-    "Medical Record": "病历",
-    "Health Status": "健康状况",
-    "Are you sure you want to finish the interpretation?": "您确定要结束翻译吗？",
-    "Would you like to start interpretation?": "您想开始翻译吗？",
-    "Please leave a review.": "请留下评论。",
-    "Please write a hospital.": "请填写医院名称。",
-    "whatToExpect": "就诊预期",
-    "keyPhrases": "关键短语",
-    "actionGuide": "操作指南",
-    "possibleQuestions": "可能的问题",
-    "tips": "提示",
-    "Text translation": "文本翻译",
-    "OUCH guide": "OUCH 指南",
-    "Recommended Hospital": "推荐医院",
-    "Identified Symptoms": "已识别的症状",
-    "Find Recommended Hospitals": "查找推荐医院",
-    "Find Pharmacy": "查找药房",
-    "Finish": "完成",
-    "selfDiagnosisMessage": "请填写<1>自我诊断表</1>来说明您的病情！",
-    "Purpose": "目的",
-    "Log out": "退出登录",
-    "Medical Document": "医疗文书",
-    "Where do you want to go?": "你想去哪里？",
-    "duration": {
-      "LESS_THAN_1_DAY": "少于一天",
-      "ONE_TO_3_DAYS": "1到3天",
-      "MORE_THAN_3_DAYS": "超过3天",
-      "MORE_THAN_1_WEEK": "超过一周",
-      "MORE_THAN_1_MONTH": "超过一个月"
-    },
-    "mild": "轻度",
-    "severe": "重度",
-    "Search for hospital and pharmacies": "请搜索医院或药店",
-    "Medical Department": "科别",
-    "Recommended": "推荐",
-    "Distance": "距离",
-    "Disease": "疾病",
-    "Allergy": "过敏",
-    "Blood Pressure": "血压",
-    "BloodSugar": "血糖",
-    "Blood Sugar": "血糖",
-    "MedicineHistory": "服药历史",
-    "History": "服药历史",
-    "Date of visit": "就诊日期",
-    "Visiting Hospital / Pharmacy": "就诊医院 / 药房",
-    "Symptoms": "症状",
-    "Severity of SymptomsList(0~10)": "症状严重程度 (0~10)",
-    "Additional Notes": "附加说明",
-    "Visiting Hospital": "就诊医院",
-    "Medical Subjects": "医疗科目",
-    "Treatment Summary": "治疗总结"
-  }
+  "Self-diagnosis": "自我诊断",
+  "Hospital": "医院",
+  "Pharmacy": "药房",
+  "HOSPITAL": "医院",
+  "PHARMACY": "药房",
+  "How severe is the pain?": "疼痛有多严重？",
+  "How long did the symptoms lasted?": "症状持续了多久？",
+  "Duration of symptoms": "症状持续时间",
+  "Please write down what you would like to tell the doctor additionally": "请写下您想额外告诉医生的内容",
+  "Please write down the relevant symptoms in detail": "请详细写下相关症状",
+  "What symptom are you experiencing?": "您有哪些症状？",
+  "symptoms": "症状",
+  "Where are you feeling uncomfortable?": "您哪里不舒服？",
+  "Review": "评价",
+  "Like": "点赞",
+  "Favorite": "收藏",
+  "Notice": "通知",
+  "Feedback": "反馈",
+  "Customer Service": "客户服务",
+  "Self-Diagnosis": "自我诊断",
+  "Medical Record": "病历",
+  "Health Status": "健康状况",
+  "Are you sure you want to finish the interpretation?": "您确定要结束翻译吗？",
+  "Would you like to start interpretation?": "您想开始翻译吗？",
+  "Your consultation is complete!": "您的咨询已完成！",
+  "Please leave a review.": "请留下评论。",
+  "Please write a hospital.": "请填写医院名称。",
+  "whatToExpect": "就诊预期",
+  "keyPhrases": "关键短语",
+  "actionGuide": "操作指南",
+  "possibleQuestions": "可能的问题",
+  "tips": "提示",
+  "Text translation": "文本翻译",
+  "OUCH guide": "OUCH 指南",
+  "Recommended Hospital": "推荐医院",
+  "Identified Symptoms": "已识别的症状",
+  "Find Recommended Hospitals": "查找推荐医院",
+  "Find Pharmacy": "查找药房",
+  "Finish": "完成",
+  "selfDiagnosisMessage": "请填写<1>自我诊断表</1>来说明您的病情！",
+  "Purpose": "目的",
+  "Log out": "退出登录",
+  "Medical Document": "医疗文书",
+  "Where do you want to go?": "你想去哪里？",
+  "duration": {
+    "LESS_THAN_1_DAY": "少于一天",
+    "ONE_TO_3_DAYS": "1到3天",
+    "MORE_THAN_3_DAYS": "超过3天",
+    "MORE_THAN_1_WEEK": "超过一周",
+    "MORE_THAN_1_MONTH": "超过一个月"
+  },
+  "mild": "轻度",
+  "severe": "重度",
+  "Search for hospital and pharmacies": "请搜索医院或药店",
+  "Medical Department": "科别",
+  "Recommended": "推荐",
+  "Distance": "距离",
+  "Disease": "疾病",
+  "Allergy": "过敏",
+  "Blood Pressure": "血压",
+  "BloodSugar": "血糖",
+  "Blood Sugar": "血糖",
+  "MedicineHistory": "服药历史",
+  "History": "服药历史",
+  "Date of visit": "就诊日期",
+  "Visiting Hospital / Pharmacy": "就诊医院 / 药房",
+  "Symptoms": "症状",
+  "Severity of SymptomsList(0~10)": "症状严重程度 (0~10)",
+  "Additional Notes": "附加说明",
+  "Visiting Hospital": "就诊医院",
+  "Medical Subjects": "医疗科目",
+  "Treatment Summary": "治疗总结",
+  "Start": "开始",
+  "Situational Guide": "情境指南",
+  "Cancel": "取消",
+  "Submit": "提交",
+  "Stop": "临时停车",
+  "Do you want to stop\nthe self-diagnosis?": "你想停止自我诊断吗？",
+  "Prev": "上一个",
+  "Next": "下一个",
+  "Save": "保存"
+}
