--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -79,5 +79,27 @@
   "Do you want to stop\nthe self-diagnosis?": "你想停止自我诊断吗？",
   "Prev": "上一个",
   "Next": "下一个",
-  "Save": "保存"
+  "Save": "保存",
+  "Do you want to delete a Self-Diagnosis" : "你想删除一个自我诊断吗？",
+  "Delete" : "删除",
+  "New":"新的",
+  "Do you want to delete this medical record?" : "你想删除这个医疗记录吗？" ,
+  "YY":"年" ,
+  "MM":"月份",
+  "DD":"天",
+  "Do you want to save your changes before exiting?" : "您想在退出前保存更改吗？",
+  "Contraction": "收缩",
+  "Fasting" : "禁食",
+  "Relaxation":"放松",
+  "Postprandial":"餐后",
+  "My page":"我的页面",
+  "Edit Profile":"编辑个人资料",
+  "male" : "男性",
+  "female" : "女性",
+  "country": {
+    "US": "美国",
+    "KO": "韩国",
+    "JP": "日本"
+  },
+  "select_country": "请选择您的国家"
 }
