feat : 자가진단페이지 및 의료페이지 비어있을때 다국어 처리

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -100,5 +100,9 @@
     "KO": "South Korea",
     "JP": "Japan"
   },
-  "select_country": "Select your country"
+  "select_country": "Select your country",
+  "Would you like to start Self-Diagnosis?" : "Would you like to starㅅ \n Self-Diagnosis?",
+  "Would you like to start Medical Record?" : "Would you like to start \n Medical Record?"
+
+
 }
