--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -103,5 +103,7 @@
     "KO": "대한민국",
     "JP": "일본"
   },
-  "select_country": "국가를 선택하세요"
+  "select_country": "국가를 선택하세요",
+  "Would you like to start Self-Diagnosis?" : "자가진단을 \n 시작하시겠습니까?",
+  "Would you like to start Medical Record?" : "의료기록 작성을 \n 시작하시겠습니까?"
 }
