--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -101,5 +101,7 @@
     "KO": "韩国",
     "JP": "日本"
   },
-  "select_country": "请选择您的国家"
+  "select_country": "请选择您的国家",
+  "Would you like to start Self-Diagnosis?" : "您想开始自我诊断吗？",
+  "Would you like to start Medical Record?" : "您想开始医疗记录吗？"
 }
