chore: 자가진단표 다국어 스크립트 수정[FE-81]

--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -7,11 +7,11 @@
   "How severe is the pain?": "통증이 얼마나 심한가요?",
   "How long did the symptoms lasted?": "증상이 얼마나 지속되었나요?",
   "Duration of symptoms": "증상 지속 기간",
-  "Please write down what you would like to tell the doctor additionally": "의사에게 추가로 전달하고 싶은 내용을 적어주세요",
-  "Please write down the relevant symptoms in detail": "관련 증상을 자세히 적어주세요",
-  "What symptom are you experiencing?": "어떤 증상이 있나요?",
+  "addition Message": "의사에게 추가로 전달하고 싶은<1/>내용을 적어주세요.",
+  "Please write down the relevant symptoms in detail": "증상을 구체적으로 입력해 주세요.",
+  "What symptom are you experiencing?": "어떤 증상이 있으신가요?",
   "symptoms": "증상",
-  "Where are you feeling uncomfortable?": "어디가 불편한가요?",
+  "Where are you feeling uncomfortable?": "어디가 불편하신가요?",
   "Review": "리뷰",
   "Like": "좋아요",
   "Favorite": "즐겨찾기",
@@ -38,7 +38,7 @@
   "Find Recommended Hospitals": "추천 병원 찾기",
   "Find Pharmacy": "약국 찾기",
   "Finish": "종료",
-  "selfDiagnosisMessage": "증상 설명을 위해 <1>자가진단 표</1>를 작성해 주세요!",
+  "selfDiagnosisMessage": "증상 설명을 위해 <1>자가진단 표</1>를 <2/>먼저 작성해 주세요!",
   "Purpose": "목적",
   "Log out": "로그아웃",
   "Medical Document": "의료 문서",
@@ -81,5 +81,10 @@
   "Do you want to stop\nthe self-diagnosis?": "자가진단을\n중지하시겠습니까?",
   "Prev": "이전",
   "Next": "다음",
-  "Save": "저장하기"
+  "Save": "저장하기",
+  "Less than a day": "1일 미만",
+  "1-3 days": "1~3일",
+  "More than 3 days": "3일 초과",
+  "More than a week": "1주일 초과",
+  "More than a month": "1개월 초과"
 }
