--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -105,5 +105,14 @@
   },
   "select_country": "국가를 선택하세요",
   "Would you like to start Self-Diagnosis?" : "자가진단을 \n 시작하시겠습니까?",
-  "Would you like to start Medical Record?" : "의료기록 작성을 \n 시작하시겠습니까?"
+  "Would you like to start Medical Record?" : "의료기록 작성을 \n 시작하시겠습니까?",
+  "No Medical Record Yet" : "아직 의료기록이 없습니다",
+  "e.g. 2025.05.11":"예: 2025.05.11",
+  "e.g. Hanyang Hospital":"예: 한양병원",
+  "e.g. pollen":"예: 꽃가루알러지",
+  "e.g. headache": "예: 두통",
+  "e.g. you don't have a milk": "예: 우유를 드시지 마세요",
+   "e.g. diabetes, colic": "예: 당뇨, 산통",
+  "e.g. pollen, sellfish, peach": "예: 꽃가루, 조개류, 복숭아",
+  "e.g. Aspirin": "예: 아스피린"
 }
