--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -102,7 +102,8 @@
   },
   "select_country": "Select your country",
   "Would you like to start Self-Diagnosis?" : "Would you like to starㅅ \n Self-Diagnosis?",
-  "Would you like to start Medical Record?" : "Would you like to start \n Medical Record?"
+  "Would you like to start Medical Record?" : "Would you like to start \n Medical Record?",
+  "Language Settings":"Language Settings"
 
 
 }
