chore : Republic of Korea로 수정

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -97,7 +97,7 @@
   "female" : "female",
   "country": {
     "US": "United States",
-    "KO": "South Korea",
+    "KO": "Republic of Korea",
     "JP": "Japan",
     "ZH": "China"
   },
