--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -79,37 +79,37 @@
   "Prev": "Prev",
   "Next": "Next",
   "Save": "Save",
-  "Do you want to delete a Self-Diagnosis" : "Do you want to delete \n a Self-Diagnosis",
-  "Delete" : "Delete",
-  "New":"New",
-  "Do you want to delete this medical record?" : "Do you want to delete \n this medical record?" ,
-  "YY":"YY" ,
-  "MM":"MM",
-  "DD":"DD",
-  "Do you want to save your changes before exiting?" : "Do you want to save your \n changes before exiting?",
+  "Do you want to delete a Self-Diagnosis": "Do you want to delete \n a Self-Diagnosis",
+  "Delete": "Delete",
+  "New": "New",
+  "Do you want to delete this medical record?": "Do you want to delete \n this medical record?",
+  "YY": "YY",
+  "MM": "MM",
+  "DD": "DD",
+  "Do you want to save your changes before exiting?": "Do you want to save your \n changes before exiting?",
   "Contraction": "Contraction",
-  "Fasting" : "Fasting",
-  "Relaxation":"Relaxation",
-  "Postprandial":"PostPrandial",
-  "My page":"My page",
-  "Edit Profile":"Edit Profile",
-  "male" : "male",
-  "female" : "female",
+  "Fasting": "Fasting",
+  "Relaxation": "Relaxation",
+  "Postprandial": "PostPrandial",
+  "My page": "My page",
+  "Edit Profile": "Edit Profile",
+  "male": "male",
+  "female": "female",
   "country": {
     "US": "United States",
     "KO": "South Korea",
     "JP": "Japan"
   },
   "select_country": "Select your country",
-  "Would you like to start Self-Diagnosis?" : "Would you like to start \n Self-Diagnosis?",
-  "No Medical Record Yet":"No Medical Record Yet",
-  "e.g. 2025.05.11":"e.g. 2025.05.11",
-  "e.g. Hanyang Hospital":"e.g. Hanyang Hospital",
-  "e.g. pollen":"e.g.pollen",
+  "Would you like to start Self-Diagnosis?": "Would you like to start \n Self-Diagnosis?",
+  "No Medical Record Yet": "No Medical Record Yet",
+  "e.g. 2025.05.11": "e.g. 2025.05.11",
+  "e.g. Hanyang Hospital": "e.g. Hanyang Hospital",
+  "e.g. pollen": "e.g.pollen",
   "e.g. headache": "e.g. headache",
   "e.g. you don't have a milk": "e.g. you don't have a milk",
-  "e.g. diabetes, colic":"e.g. diabetes, colic",
-  "e.g. pollen, sellfish, peach":"e.g. pollen, sellfish, peach",
-  "e.g. Aspirin":"e.g. Aspirin"
-
+  "e.g. diabetes, colic": "e.g. diabetes, colic",
+  "e.g. pollen, sellfish, peach": "e.g. pollen, sellfish, peach",
+  "e.g. Aspirin": "e.g. Aspirin",
+  "Sadong, Sangnok-gu": "Sadong, Sangnok-gu"
 }
