--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -80,37 +80,38 @@
   "Prev": "上一个",
   "Next": "下一个",
   "Save": "保存",
-  "Do you want to delete a Self-Diagnosis" : "你想删除一个自我诊断吗？",
-  "Delete" : "删除",
-  "New":"新的",
-  "Do you want to delete this medical record?" : "你想删除这个医疗记录吗？" ,
-  "YY":"年" ,
-  "MM":"月份",
-  "DD":"天",
-  "Do you want to save your changes before exiting?" : "您想在退出前保存更改吗？",
+  "Do you want to delete a Self-Diagnosis": "你想删除一个自我诊断吗？",
+  "Delete": "删除",
+  "New": "新的",
+  "Do you want to delete this medical record?": "你想删除这个医疗记录吗？",
+  "YY": "年",
+  "MM": "月份",
+  "DD": "天",
+  "Do you want to save your changes before exiting?": "您想在退出前保存更改吗？",
   "Contraction": "收缩",
-  "Fasting" : "禁食",
-  "Relaxation":"放松",
-  "Postprandial":"餐后",
-  "My page":"我的页面",
-  "Edit Profile":"编辑个人资料",
-  "male" : "男性",
-  "female" : "女性",
+  "Fasting": "禁食",
+  "Relaxation": "放松",
+  "Postprandial": "餐后",
+  "My page": "我的页面",
+  "Edit Profile": "编辑个人资料",
+  "male": "男性",
+  "female": "女性",
   "country": {
     "US": "美国",
     "KO": "韩国",
     "JP": "日本"
   },
   "select_country": "请选择您的国家",
-  "Would you like to start Self-Diagnosis?" : "您想开始自我诊断吗？",
-  "Would you like to start Medical Record?" : "您想开始医疗记录吗？",
-  "No Medical Record Yet":"暂无医疗记录",
-  "e.g. 2025.05.11":"例如: 2025.05.11",
-  "e.g. Hanyang Hospital":"例如：汉阳医院",
-  "e.g. pollen":"例如：花粉过敏",
+  "Would you like to start Self-Diagnosis?": "您想开始自我诊断吗？",
+  "Would you like to start Medical Record?": "您想开始医疗记录吗？",
+  "No Medical Record Yet": "暂无医疗记录",
+  "e.g. 2025.05.11": "例如: 2025.05.11",
+  "e.g. Hanyang Hospital": "例如：汉阳医院",
+  "e.g. pollen": "例如：花粉过敏",
   "e.g. headache": "例如：头痛",
   "e.g. you don't have a milk": "例如：请不要喝牛奶",
-   "e.g. diabetes, colic": "例如：糖尿病、绞痛",
-    "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
-    "e.g. Aspirin": "例如：阿司匹林"
+  "e.g. diabetes, colic": "例如：糖尿病、绞痛",
+  "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
+  "e.g. Aspirin": "例如：阿司匹林",
+  "Sadong, Sangnok-gu": "常绿区沙洞"
 }
