fix: 자가진단 condition 파라미터 에러 해결[FE-87]

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -115,6 +115,7 @@
   "e.g. you don't have a milk": "e.g. you don't have a milk",
   "e.g. diabetes, colic":"e.g. diabetes, colic",
   "e.g. pollen, sellfish, peach":"e.g. pollen, sellfish, peach",
-  "e.g. Aspirin":"e.g. Aspirin"
+  "e.g. Aspirin":"e.g. Aspirin",
+  "When or how does this symptom appear?":"When or how does this symptom appear?"
 
 }
