--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -117,5 +117,6 @@
   "e.g. you don't have a milk": "例如：请不要喝牛奶",
    "e.g. diabetes, colic": "例如：糖尿病、绞痛",
     "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
-    "e.g. Aspirin": "例如：阿司匹林"
+    "e.g. Aspirin": "例如：阿司匹林",
+    "When or how does this symptom appear?":"这个症状是在什么时候、以什么方式出现的？"
 }
