--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -105,5 +105,15 @@
   "select_country": "请选择您的国家",
   "Would you like to start Self-Diagnosis?" : "您想开始自我诊断吗？",
   "Would you like to start Medical Record?" : "您想开始医疗记录吗？",
-  "Language Settings":"语言设置"
+  "Language Settings":"语言设置",
+   "No Medical Record Yet":"暂无医疗记录",
+  "e.g. 2025.05.11":"例如: 2025.05.11",
+  "e.g. Hanyang Hospital":"例如：汉阳医院",
+  "e.g. pollen":"例如：花粉过敏",
+  "e.g. headache": "例如：头痛",
+  "e.g. you don't have a milk": "例如：请不要喝牛奶",
+   "e.g. diabetes, colic": "例如：糖尿病、绞痛",
+    "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
+    "e.g. Aspirin": "例如：阿司匹林",
+    "When or how does this symptom appear?":"这个症状是在什么时候、以什么方式出现的？"
 }
