--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -120,5 +120,6 @@
    "e.g. diabetes, colic": "예: 당뇨, 산통",
   "e.g. pollen, sellfish, peach": "예: 꽃가루, 조개류, 복숭아",
   "e.g. Aspirin": "예: 아스피린",
-  "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?"
+  "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?",
+  "Recommend": "진료과 추천 결과"
 }
