--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -1,8 +1,10 @@
 {
   "Self-diagnosis": "Self-diagnosis",
   "Hospital": "Hospital",
+  "hospital": "hospital",
   "HOSPITAL": "Hospital",
   "Pharmacy": "Pharmacy",
+  "pharmacy": "pharmacy",
   "PHARMACY": "Pharmacy",
   "How severe is the pain?": "How severe is the pain?",
   "How long did the symptoms lasted?": "How long did the symptoms last?",
@@ -84,14 +86,14 @@
   "More than 3 days": "More than 3 days",
   "More than a week": "More than a week",
   "More than a month": "More than a month",
-  "Do you want to delete a Self-Diagnosis" : "Do you want to delete \n a Self-Diagnosis",
-  "Delete" : "Delete",
-  "New":"New",
-  "Do you want to delete this medical record?" : "Do you want to delete \n this medical record?" ,
-  "YY":"YY" ,
-  "MM":"MM",
-  "DD":"DD",
-  "Do you want to save your changes before exiting?" : "Do you want to save your \n changes before exiting?",
+  "Do you want to delete a Self-Diagnosis": "Do you want to delete \n a Self-Diagnosis",
+  "Delete": "Delete",
+  "New": "New",
+  "Do you want to delete this medical record?": "Do you want to delete \n this medical record?",
+  "YY": "YY",
+  "MM": "MM",
+  "DD": "DD",
+  "Do you want to save your changes before exiting?": "Do you want to save your \n changes before exiting?",
   "Contraction": "Contraction",
   "Fasting": "Fasting",
   "Relaxation": "Relaxation",
@@ -113,9 +115,10 @@
   "e.g. pollen": "e.g.pollen",
   "e.g. headache": "e.g. headache",
   "e.g. you don't have a milk": "e.g. you don't have a milk",
-  "e.g. diabetes, colic":"e.g. diabetes, colic",
-  "e.g. pollen, sellfish, peach":"e.g. pollen, sellfish, peach",
-  "e.g. Aspirin":"e.g. Aspirin",
-  "When or how does this symptom appear?":"When or how does this symptom appear?",
-  "Sadong, Sangnok-gu": "Sadong, Sangnok-gu"
+  "When or how does this symptom appear?": "When or how does this symptom appear?",
+  "e.g. diabetes, colic": "e.g. diabetes, colic",
+  "e.g. pollen, sellfish, peach": "e.g. pollen, sellfish, peach",
+  "e.g. Aspirin": "e.g. Aspirin",
+  "Sadong, Sangnok-gu": "Sadong, Sangnok-gu",
+  "Search for Address": "Search for Address"
 }
