--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -1,7 +1,9 @@
 {
   "Self-diagnosis": "자가진단",
   "Hospital": "병원",
+  "hospital": "병원",
   "Pharmacy": "약국",
+  "pharmacy": "약국",
   "HOSPITAL": "병원",
   "PHARMACY": "약국",
   "How severe is the pain?": "통증이 얼마나 심한가요?",
@@ -87,7 +89,7 @@
   "More than 3 days": "3일 초과",
   "More than a week": "1주일 초과",
   "More than a month": "1개월 초과",
-  "Do you want to delete a Self-Diagnosis":"자가진단을 \n 삭제하시겠습니까?",
+  "Do you want to delete a Self-Diagnosis": "자가진단을 \n 삭제하시겠습니까?",
   "Delete": "삭제하기",
   "New": "생성",
   "Do you want to delete this medical record?": "의료기록을 \n 삭제하시겠습니까?",
@@ -121,5 +123,6 @@
   "e.g. pollen, sellfish, peach": "예: 꽃가루, 조개류, 복숭아",
   "e.g. Aspirin": "예: 아스피린",
   "Sadong, Sangnok-gu": "상록구 사동",
-  "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?"
+  "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?",
+  "Search for Address": "주소를 검색하세요"
 }
