feat: 통역 다국어 설정 및 모달 닫기 기능 추가 [FE-83]

--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -124,5 +124,9 @@
   "e.g. Aspirin": "예: 아스피린",
   "Sadong, Sangnok-gu": "상록구 사동",
   "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?",
-  "Search for Address": "주소를 검색하세요"
+  "Search for Address": "주소를 검색하세요",
+  "Reception": "접수",
+  "Wating Room": "대기실",
+  "Consultation": "상담",
+  "Payment": "결제"
 }
