--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -122,5 +122,9 @@
   "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
   "e.g. Aspirin": "例如：阿司匹林",
   "Sadong, Sangnok-gu": "常绿区沙洞",
-  "Search for Address": "查找地址"
+  "Search for Address": "查找地址",
+  "Reception": "接待",
+  "Wating Room": "等候室",
+  "Consultation": "咨询",
+  "Payment": "支付"
 }
