style: 추천페이지 및 메인 헤더 UI 수정[FE-89]

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -116,6 +116,7 @@
   "e.g. diabetes, colic":"e.g. diabetes, colic",
   "e.g. pollen, sellfish, peach":"e.g. pollen, sellfish, peach",
   "e.g. Aspirin":"e.g. Aspirin",
-  "When or how does this symptom appear?":"When or how does this symptom appear?"
+  "When or how does this symptom appear?":"When or how does this symptom appear?",
+  "Recommend":"Based on the analysis,\nwe'll recommend departments."
 
 }
