--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -118,5 +118,6 @@
    "e.g. diabetes, colic": "例如：糖尿病、绞痛",
     "e.g. pollen, sellfish, peach": "例如：花粉、贝类、水蜜桃",
     "e.g. Aspirin": "例如：阿司匹林",
-    "When or how does this symptom appear?":"这个症状是在什么时候、以什么方式出现的？"
+    "When or how does this symptom appear?":"这个症状是在什么时候、以什么方式出现的？",
+    "Recommend": "根据分析结果，\n为您推荐合适的科室。"
 }
