fix: AI 코드리뷰 반영 [FE-83]

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -122,7 +122,7 @@
   "Sadong, Sangnok-gu": "Sadong, Sangnok-gu",
   "Search for Address": "Search for Address",
   "Reception": "Reception",
-  "Wating Room": "Wating Room",
+  "Waiting Room": "Waiting Room",
   "Consultation": "Consultation",
   "Payment": "Payment"
 }
