--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -124,7 +124,7 @@
   "Sadong, Sangnok-gu": "常绿区沙洞",
   "Search for Address": "查找地址",
   "Reception": "接待",
-  "Wating Room": "等候室",
+  "Waiting Room": "等候室",
   "Consultation": "咨询",
   "Payment": "支付"
 }
