--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -126,7 +126,7 @@
   "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?",
   "Search for Address": "주소를 검색하세요",
   "Reception": "접수",
-  "Wating Room": "대기실",
+  "Waiting Room": "대기실",
   "Consultation": "상담",
   "Payment": "결제"
 }
