--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -123,5 +123,7 @@
   "e.g. Aspirin": "例如：阿司匹林",
   "Sadong, Sangnok-gu": "常绿区沙洞",
   "Search for Address": "查找地址",
-  "Recommend": "根据分析结果，\n为您推荐合适的科室。"
+  "Recommend": "根据分析结果，\n为您推荐合适的科室。",
+  "commingsoon": "服务开发中，\n敬请期待！",
+  "commingback":"返回"
 }
