--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -125,5 +125,7 @@
   "Sadong, Sangnok-gu": "상록구 사동",
   "When or how does this symptom appear?": "증상이 언제 어떻게 나타나나요?",
   "Search for Address": "주소를 검색하세요",
-    "Recommend": "분석을 기반으로 \n맞춤 진료과 안내해 드릴게요"
+  "Recommend": "분석을 기반으로 \n맞춤 진료과 안내해 드릴게요",
+  "commingsoon": "서비스 준비 중입니다.\n곧 만나뵐게요!",
+  "commingback":"뒤로가기"
 }
