style: 리뷰 UI 구현

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -134,5 +134,7 @@
   "Loading...": "Loading...",
   "Doctor": "Doctor",
   "Interpretation": "Interpretation",
-  "Guide": "Guide"
+  "Guide": "Guide",
+  "Info": "Info",
+  "No reviews available yet.": "No reviews available yet."
 }
