--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -137,5 +137,7 @@
   "Loading...": "로딩 중...",
   "Doctor": "의사",
   "Interpretation": "통역중",
-  "Guide": "가이드"
+  "Guide": "가이드",
+  "Info": "정보",
+  "No reviews available yet.": "아직 리뷰가 없습니다."
 }
