--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -135,5 +135,7 @@
   "Loading...": "加载中...",
   "Doctor": "医生",
   "Interpretation": "解释中",
-  "Guide": "指南"
+  "Guide": "指南",
+  "Info": "信息",
+  "No reviews available yet.": "暂无评论"
 }
