chore: 위치 기반 확인 통역 모달 추가

--- a/src/features/i18n/locales/en-US/translation.json
+++ b/src/features/i18n/locales/en-US/translation.json
@@ -139,5 +139,9 @@
   "No reviews available yet.": "No reviews available yet.",
   "Please write a review": "Please write a review",
   "Region": "Region",
-  "Facility": "Facility"
+  "Facility": "Facility",
+  "Yes": "Yes",
+  "Current Location": "Current Location",
+  "(estimated)medical institution": "(estimated)medical institution",
+  "Is this the correct\ninstitution you want to use?": "Is this the correct\ninstitution you want to use?"
 }
