--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -140,5 +140,6 @@
   "No reviews available yet.": "暂无评论",
   "Please write a review": "请撰写评论",
   "Region": "地区",
-  "Facility": "医疗保健"
+  "Facility": "医疗保健",
+  "Please fill in all fields before saving":"请在保存之前填写所有字段"
 }
