--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -142,5 +142,6 @@
   "No reviews available yet.": "아직 리뷰가 없습니다.",
   "Please write a review": "리뷰를 작성해주세요",
   "Region": "지역",
-  "Facility": "의료기관"
+  "Facility": "의료기관",
+  "Please fill in all fields before saving" : "모든 필드를 입력해주세요"
 }
