fix:빌드오류수정

--- a/src/features/i18n/locales/ko-KR/translation.json
+++ b/src/features/i18n/locales/ko-KR/translation.json
@@ -143,7 +143,7 @@
   "Please write a review": "리뷰를 작성해주세요",
   "Region": "지역",
   "Facility": "의료기관",
-  "Please fill in all fields before saving" : "모든 필드를 입력해주세요"
+  "Please fill in all fields before saving" : "모든 필드를 입력해주세요",
   "Yes": "예",
   "Current Location": "현재 위치",
   "(estimated)medical institution": "근처 의료기관 (추정)",
