--- a/src/features/i18n/locales/zh-CN/translation.json
+++ b/src/features/i18n/locales/zh-CN/translation.json
@@ -141,7 +141,7 @@
   "Please write a review": "请撰写评论",
   "Region": "地区",
   "Facility": "医疗保健",
-  "Please fill in all fields before saving":"请在保存之前填写所有字段"
+  "Please fill in all fields before saving":"请在保存之前填写所有字段",
   "Yes": "是",
   "Current Location": "当前位置",
   "(estimated)medical institution": "预估附近医疗机构",
